# space_vibe

./: .gitignore  GLOBAL_SPEC.md  README.md  SPACE_TODO.md
bevy_prototype/: Cargo.toml  crash_log.txt
bevy_prototype/assets/fonts/: README.md
bevy_prototype/data/: keybindings.json  llm_config.json
bevy_prototype/data/enemies/: alien_ufo.json
bevy_prototype/data/maps/: desert_planet.json  greeting_aurora.json  ice_caves.json  idf_transport.json  space_asteroids.json
bevy_prototype/data/skins/: artichoke_skin.json  banana.json  big_old_flower.json  butterfly.json  excalibur_sword_in_rock.json  grape_skin.json  grapefruit.json  mosquito.json  mushroom_skin.json  skin_bob_leponge.json  skin_burger_ship.json  skin_coccinelle.json  skin_p47_thunderbolt.json  skin_p51_mustang.json  skin_poulet_ultra_realiste.json  stick_skin_01.json  war_plane.json
bevy_prototype/src/: components.rs  main.rs  resources.rs  setup.rs
bevy_prototype/src/systems/: collision.rs  combat.rs  data_loader.rs  death_screen.rs  exit.rs  menu.rs  mod.rs  mouse.rs  movement.rs  shuttle.rs  space_scene.rs  spawner.rs  start_menu.rs  ui.rs
bevy_prototype/src/systems/core/: camera_view.rs  collision.rs  exit.rs  fullscreen.rs  mod.rs  mouse.rs  movement.rs  player_ship.rs  spawner.rs
bevy_prototype/src/systems/enemies/: alien_ships.rs  combat.rs  missiles.rs  mod.rs
bevy_prototype/src/systems/scenes/: desert_planet.rs  ice_caves.rs  idf_transport.rs  mod.rs  scene_manager.rs  space_scene.rs
bevy_prototype/src/systems/ui/: copilot_chat.rs  death_screen.rs  hud.rs  menu.rs  minimap.rs  mod.rs  (+1 more)
(+2 files in other folders)
