[package]
name = "bevy_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.35"
ureq = { version = "2", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
